# folivora--data-engineering

./: .gitignore  README.md  cli.py  config.ini  config_reader.py  docker-compose.yml  docs.py  main.py  pyproject.toml  requirements.txt  utils.py
api/routes/: app.py  book.py  customer.py
api/schema/: schemas.py
app/: utils.py
app/api/models/: customer.py
app/api/routes/: customer.py
app/api/schema/: schemas.py
app/config/: database.py
app/db/: database.py  launcher_customers.py  launcher_orders.py
app/ingestion/launchers/: launcher_abandoned_checkouts.py  launcher_categories.py  launcher_customers.py  launcher_orders.py  launcher_products.py
app/ingestion/loaders/: tiendanube.py  utils.py
app/ingestion/loaders/parsers/: parse_abandoned_checkouts.py  parse_categories.py  parse_customers.py  parse_orders.py  parse_products.py
app/launchers/: launcher_abandoned_checkouts.py  launcher_categories.py  launcher_customers.py  launcher_orders.py  launcher_products.py
app/loader/: main.py  tiendanube.py
app/loaders/: parse_customers.py  parse_orders.py  tiendanube.py  utils.py
app/loaders/parsers/: parse_abandoned_checkouts.py  parse_categories.py  parse_orders.py  parse_products.py
app/transform/folivora_warehouse/: .user.yml  dbt_project.yml  package-lock.yml  packages.yml  profiles.yml
app/transform/folivora_warehouse/models/: sources.yml
data/: customer_collection.py  database.py
db/: launcher.py
deploy/: Dockerfile
loaders/: launcher.py  tiendanube.py
python_loaders/: base.py  utils.py
python_loaders/ecommerce/tiendanube/: config.yaml  tiendanube.py
(+8 files in other folders)
