[tool.poetry]
name = "folivora--data-engineering"
version = "1.0.0"
description = "Data Engineering things for Folivora Vegan brand."
authors = ["Julian Boronat <boronat.j.e@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<4"
requests = "^2.31.0"
backoff = "^2.2.1"
logging = "^0.4.9.6"
python-dotenv = "^1.0.1"
duckdb = "^0.10.2"
pandas = "^2.2.2"
dbt-duckdb = "^1.8.1"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"